<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:text="@string/create_your_account"
            android:textAlignment="center"
            android:textColor="?attr/colorTitleText"
            android:textSize="32sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:background="@drawable/edit_text_outlined"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:background="@drawable/edit_text_outlined"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:background="@drawable/edit_text_outlined"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:background="@drawable/edit_text_outlined"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?attr/colorControlNormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="?attr/colorControlNormal" />


        </LinearLayout>

        <Button
            style="@style/OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            app:icon="@drawable/ic_google" />

        <Button
            style="@style/OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            app:icon="@drawable/ic_facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:clickable="true"
            android:text="@string/already_have_account"
            android:textAlignment="center" />


    </LinearLayout>

</ScrollView>